fixed alignemnt for merge with james

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ html {
 
 body {
   font-family: 'Roboto';
-  text-align: center;
   background-color: black;
 }
 
