--- a/src/Styles/Song.css
+++ b/src/Styles/Song.css
@@ -1,6 +1,5 @@
 body {
   font-family: 'Roboto';
-  text-align: left;
 }
 
 .song{
