--- a/src/Styles/SongForm.css
+++ b/src/Styles/SongForm.css
@@ -17,7 +17,7 @@
   font-size: 12px;
   padding:1.5px;
   padding-left: 8px;
-  padding-right: 8px;
+  padding-right: 4px;
   position: absolute;
   border-width: 0px;
   border-radius: 0px 6px 6px 0px;
